trunk/Archive2/d1/3fad741e0d21a8/output
main.cpp:10:79: error: unknown escape sequence: '\040'
         std :: cout  <<  "exceção inteiro foi pego, com valor : "  << i <<  ' \ n ' ; 
                                                                               ^
main.cpp:10:79: warning: multi-character character constant [-Wmultichar]
main.cpp:18:5: error: stray '\303' in program
     }  captura (  const  std :: exceção & e )  {  // pego de referência para a base 
     ^
main.cpp:18:5: error: stray '\247' in program
main.cpp:18:5: error: stray '\303' in program
main.cpp:18:5: error: stray '\243' in program
main.cpp:19:75: error: missing terminating " character
         std :: cout  <<  "uma exceção padrão foi pego, com a mensagem" " 
                                                                           ^
main.cpp:19:9: error: missing terminating " character
         std :: cout  <<  "uma exceção padrão foi pego, com a mensagem" " 
         ^
main.cpp:20:19: error: stray '\' in program
                   << e. o que ( )  <<  "" \ n " ; 
                   ^
main.cpp:20:47: error: missing terminating " character
                   << e. o que ( )  <<  "" \ n " ; 
                                               ^
main.cpp:20:19: error: missing terminating " character
                   << e. o que ( )  <<  "" \ n " ; 
                   ^
main.cpp: In function 'int principal()':
main.cpp:6:5: error: 'tente' was not declared in this scope
     tente  { 
     ^
main.cpp:9:19: error: expected primary-expression before 'int'
     }  captura (  int i )  { 
                   ^
main.cpp:9:25: error: 'captura' was not declared in this scope
     }  captura (  int i )  { 
                         ^
main.cpp:13:12: error: expected ';' before '{' token
     tente  { 
            ^
main.cpp:18:19: error: expected primary-expression before 'const'
     }  captura (  const  std :: exceção & e )  {  // pego de referência para a base 
                   ^
main.cpp:23:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
